# Beagle-Bone---Find-the-dot

./: CMakeLists.txt
app/: CMakeLists.txt
app/include/: main.h  sharedDataStruct.h  sharedMem-Linux.h
app/src/: main.c  sharedMem-Linux.c
hal/: CMakeLists.txt
hal/include/hal/: accelerometer.h  display.h  joystick.h  pwm.h  sound.h
hal/src/: accelerometer.c  display.c  joystick.c  pwm.c  sound.c
pru-as4/: CMakeLists.txt  Makefile  neoPixel.c
